--- a/index.html
+++ b/index.html
@@ -7,7 +7,25 @@
   <title>Grid-Rotator</title>
 </head>
 <body>
- 
+ <div class="wrapper">
+  <h1>Grid Rotator</h1>
+  <div class="number" id="numbers">
+    <button id="one">1</button>
+    <button id="two">2</button>
+    <button id="three">3</button>
+  </div>
+
+  <div class="settwo" id="secondset">
+    <button id="four">4</button>
+    <button id="five">5</button>
+    <button id="six">6</button>
+  </div>
+
+  <div class="setthree" id="thirdset">
+    <button id="seven">7</button>
+    <button id="eight">8</button>
+    <button id="nine">9</button>
+  </div>
   <script src="assets/scripts/script.js"></script>
 </body>
 </html>
