--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <title>Grid-Rotator</title>
 </head>
 <body>
- <div class="wrapper">
   <h1>Grid Rotator</h1>
+
+ <div class="wrapper">
   <div class="number" id="numbers">
     <button id="one">1</button>
     <button id="two">2</button>
@@ -17,7 +18,7 @@
 
   <div class="settwo" id="secondset">
     <button id="four">4</button>
-    <button id="five">5</button>
+    <button class="rotater" id="five">5</button>
     <button id="six">6</button>
   </div>
 
